--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "debug": "^2.2.0",
     "fs-extra": "^0.13.0",
-    "gifencoder": "^1.0.6",
+    "gif-encoder": "^0.6.0",
     "pngjs": "^0.4.0"
   },
   "eslintConfig": {
