--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "author": "Sergio Cinos <sergio.cinos@gmail.com>",
   "license": "ISC",
-  "bugs": "https://bitbucket.org/scinos/th-extractor/issues",
-  "homepage": "https://bitbucket.org/scinos/th-extractor",
+  "bugs": "https://github.com/scinos/th-extractor/issues",
+  "homepage": "https://github.com/scinos/th-extractor",
   "repository" : {
     "type" : "git",
-    "url" : "https://cinos@bitbucket.org/scinos/th-extractor.git"
+    "url" : "https://github.com/scinos/th-extractor.git"
   },
   "dependencies": {
     "debug": "^2.2.0",
