--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "th-extractor",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Extracts sprites and animations from Bullfrog's Theme Hospital",
-  "keywords": ["theme hospital", "bullfrog", "th", "extractor", "ripper"],
+  "keywords": [
+    "theme hospital",
+    "bullfrog",
+    "th",
+    "extractor",
+    "ripper"
+  ],
   "main": "extract.js",
   "scripts": {
     "start": "DEBUG=* node extract.js"
@@ -11,9 +17,9 @@
   "license": "ISC",
   "bugs": "https://github.com/scinos/th-extractor/issues",
   "homepage": "https://github.com/scinos/th-extractor",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/scinos/th-extractor.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scinos/th-extractor.git"
   },
   "dependencies": {
     "debug": "^2.2.0",
